--- a/RegisLogin/app/pages/login.html
+++ b/RegisLogin/app/pages/login.html
@@ -9,7 +9,23 @@
 
 </head>
 <body>
-    <h1>Página de prueba</h1>
+    <main>
+        <div class="form-container">
+            <h1>Iniciar sesión</h1>
+            <p>Ingresa tus credenciales para acceder al área de administración</p>
+            <form id="login-form">
+                <label for="user" class="sr-only">User</label>
+                <input type="text" name="user" id="user" placeholder="Nombre de usuario">
+                <label for="password" class="sr-only">Password</label>
+                <input type="password" name="password" id="password" placeholder="Password" >
+                <button type="submit">Iniciar sesión</button>
+            </form>
+            <p>¿Todavía no tienes una cuenta? <a href="/register">Registrate</a></p>
+
+        </div>
+    </main>
+    
+
     
 </body>
 </html>
